# sports-score-cli

./: README.md  pyproject.toml  repo_url.txt
src/sports_score_cli/: __main__.py  api.py  cli.py  format.py
