[project]
name = "sports-score-cli"
version = "0.1.0"
description = "A command-line tool for fetching live NBA and NFL scores."
readme = "README.md"
authors = [
    { name = "Suchit Bhayani", email = "suchit.bhayani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sports-score = "sports_score_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
